[package]
name = "vss-website"
version = "0.2.1"
authors = ["Timothy Yuen <timothy.yuen22@gmail.com", "Neiro <neirosystem@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
